2015-5-3 Yu-Sung Su     <suyusung@tsinghua.edu.cn>
   * DESCRIPTION (Version, Date): 1.8-5
   * R/bayesglm: fix a missing line in the re-factorization of bayesglm.fit, when scaled=TRUE, and a column of X takes on more than two values, than prior.scale = prior.scale /(sd(x)*2).
   
2015-4-7 Yu-Sung Su     <suyusung@tsinghua.edu.cn>
   * DESCRIPTION (Version, Date): 1.8-4
   * R/sigma.hat: sigma.hat changed to S3 function.
   * R/fitted: changed to S3 function
   * R/coef: coef, fixef, ranef, changed to S3 function


2015-3-31 Yu-Sung Su     <suyusung@tsinghua.edu.cn>
   * DESCRIPTION (Version, Date): 1.8-03
   * R/bayesglm: revert back to a more straightforward coding, easier for debugging.
   * R/bayespolr: check n.iter to maxit, and pass it through control.


2014-8-27 Yu-Sung Su     <suyusung@tsinghua.edu.cn>
   * DESCRIPTION (Version, Date): 1.7-07
   * R/readColumns: add read.columns()
   * R/sim: fix a bug in the name calling of beta.hat
   * man/readColumns: add description for read.columns()
   * NAMESPACE: export read.columns
   * DESCRIPTION: remove foreign and R2WinBUGS from suggests



2014-8-1 Yu-Sung Su     <suyusung@tsinghua.edu.cn>
   * DESCRIPTION (Version, Date): 1.7-05 (thanks to Dr. Martyn Plummer's contribution)
   * R/bayesglm: fix several bugs in bayesglm
   * R/display: change the display for bayesglm to fit the changes stated above.
   * man/bayesglm:
        1. change M2 and M7 example codes to make them equivalent to M1 and M3.
        2. change the description for prior.scale for the gaussian family.
   * DESCRIPTION: remove foreign and R2WinBUGS from suggests

2014-4-27 Yu-Sung Su     <suyusung@tsinghua.edu.cn>
   * DESCRIPTION (Version, Date): 1.7-03
   * R/bayesglm: revert back to the use of lm.fit to lm.wfit; put a stop when dispersion goes Inf

2014-4-24 Yu-Sung Su     <suyusung@tsinghua.edu.cn>
   * DESCRIPTION (Version, Date): 1.7-02
   * R/simmer.R: simmer attaches names to fixed effects