@@ -1,6 +1,6 @@
 Package: arm
-Version: 1.8-5
-Date: 2015-05-13
+Version: 1.8-6
+Date: 2015-7-7
 Title: Data Analysis Using Regression and Multilevel/Hierarchical Models
 Authors@R: c(person("Andrew", "Gelman", role = "aut", email = "gelman@stat.columbia.edu"),
              person("Yu-Sung", "Su", role =  c("aut", "cre"), email = "suyusung@tsinghua.edu.cn"),
@@ -21,7 +21,7 @@ Author: Andrew Gelman [aut],
   Vicent Dorie [ctb]
 Maintainer: Yu-Sung Su <suyusung@tsinghua.edu.cn>
 Depends: R (>= 3.1.0), MASS, Matrix (>= 1.0), stats, lme4 (>= 1.0)
-Imports: abind, coda, methods, nlme
+Imports: abind, coda, graphics, grDevices, methods, nlme, utils
 Description: R functions for processing 'lm', 'glm', 'svy.glm', 'merMod' and 'polr' outputs.
 URL: http://CRAN.R-project.org/package=arm
 License: GPL (>= 2)
