@@ -7,14 +7,14 @@ setMethod("sim", signature(object = "merMod"),
     c(as.vector(decomp$ul %*% rhs[ranefRange] + decomp$ur %*% rhs[fixefRange]),
       as.vector(decomp$lr %*% rhs[fixefRange]));
   }
-  
+
   # information is conditional on hyperparameters
   # information is of [ranef, fixef]
   getInverseInformationLeftFactor <- function(regression) {
     Lz  <- getME(regression, "L");
     Rzx <- getME(regression, "RZX");
     Rx  <- getME(regression, "RX");
-    
+
     # upper left, lower right, and lower left blocks of left-factor
     # of inverse
     solveFunc <- getMethod("solve", signature(a = "CHMfactor", b = "diagonalMatrix"));
@@ -23,7 +23,7 @@ setMethod("sim", signature(object = "merMod"),
     Rzx.inv <- -Rz.inv %*% Rzx %*% Rx.inv;
 
     # this is me figuring some stuff out. new lmer doesn't permute Zt apparently
-    # 
+    #
     #Lz.tmp <- as(Lz, "sparseMatrix");
     #P.chol <- as(Lz@perm + 1, "pMatrix");
     #Zt <- getME(regression, "Zt");
@@ -36,11 +36,11 @@ setMethod("sim", signature(object = "merMod"),
     #L.hyp@perm <- Lz@perm;
     #L.hyp@type[1] <- 2L;
     #browser();
-    
+
     #P.ranef <- getRanefPerm(model);
     #Lambda <- P.ranef %*% getRanefChol(model) %*% t(P.ranef);
     Lambda <- t(getME(regression, "Lambda"));
-    
+
     return(list(ul = Lambda %*% Rz.inv, ur = Lambda %*% Rzx.inv, lr = Rx.inv));
   }
 
@@ -49,7 +49,7 @@ setMethod("sim", signature(object = "merMod"),
     return(sqrt(1 / rgamma(1, 0.5 * numDoF,
                            0.5 * devcomp$cmp[["pwrss"]])));
   }
-  
+
   regression <- object;
   devcomp <- getME(regression, "devcomp");
   dims <- devcomp$dims;
@@ -60,7 +60,7 @@ setMethod("sim", signature(object = "merMod"),
   numRanef  <- dims[["q"]];
   numFixef  <- dims[["p"]];
   numLevels <- dims[["reTrms"]];
-  
+
   isLinearMixedModel <- dims[["GLMM"]] == 0L && dims[["NLMM"]] == 0L;
   numEffects <- numRanef + numFixef;
   numDoF <- numObs - numFixef;
@@ -87,11 +87,11 @@ setMethod("sim", signature(object = "merMod"),
     simulatedRanef[[i]] <- array(NA, c(n.sims, numGroupsPerLevel[i], numCoefficientsPerLevel[i]),
                                  list(NULL, groupsPerUniqueFactor[[factorPerLevel[i]]], coefficientNamesPerLevel[[i]]));
   }
-    
+
   simulatedFixef <- matrix(NA, n.sims, numFixef,
                            dimnames = list(NULL, names(fixef(regression))));
-  
-  
+
+
   # "b" are the rotated random effects, i.e. what ranef() returns in
   # a rearranged format.
   effectsMean <- c(getME(regression, "b")@x, getME(regression, "beta"));
@@ -107,14 +107,14 @@ setMethod("sim", signature(object = "merMod"),
     simulatedEffects <- applyLeftFactor(effectsCovLeftFactor, sphericalEffects) + effectsMean;
 
     simulatedFixef[i,] <- simulatedEffects[fixefRange];
-    
+
     rawRanef <- simulatedEffects[ranefRange];
     simulatedRanefPerLevel <- split(rawRanef, ranefLevelMap);
     for (k in 1:numLevels) {
       simulatedRanef[[k]][i,,] <- matrix(simulatedRanefPerLevel[[k]], ncol = numCoefficientsPerLevel[k], byrow = TRUE);
     }
   }
-  
+
   ans <- new("sim.merMod",
              "fixef" = simulatedFixef,
              "ranef" = simulatedRanef,
